--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-    "rewrites": [
+    "redirects": [
       {
-        "source": "/(.*)",
-        "destination": "/index.html"
+        "source": "/:path*",
+        "destination": "/index.html",
+        "permanent": false
       }
     ]
   }
+  
   
